// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-1rw338e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render defaultValue 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value="Olaf"
  />
</div>
`;

exports[`props should render disabled 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
  disabled=""
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    disabled=""
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-pb5oq1"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render isSeamless 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-1m142dg"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render multiline 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-sbqiuf"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <textarea
    class="css-m7fi32"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
  />
</div>
`;

exports[`props should render prefix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="TextInputPrefix"
  >
    <span>
      prefix
    </span>
  </div>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-791mwm"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
</div>
`;

exports[`props should render suffix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value=""
  />
  <div
    class="wp-components-flex-item css-19kxsx5"
    data-g2-c16t="true"
    data-g2-component="TextInputSuffix"
  >
    <span>
      suffix
    </span>
  </div>
</div>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-kwtihv"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    value="Olaf"
  />
</div>
`;
